--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 
 <body>
-    <h1>Hola mundo.</h1>
+    <div class="plantilla">
+        <div class="card">
+            <div class="contenido">
+                <h5 class="texto">" I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "</h5>
+                <p class="nombre">Tanya Sinclair</p>
+                <p class="puesto">UX Engineer</p>
+            </div>
+            <div class="imagen">
+                <img class="bg" src="./static/img/pattern-bg.svg" alt="bg">
+                <img class="foto" src="./static/img/image-tanya.jpg" alt="tanya">
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
