--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="plantilla">
         <div class="card">
             <div class="contenido">
-                <h5 class="texto">" I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "</h5>
+                <h5 class="texto">" I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. <br>I'm now in the job of my dreams and so excited about the future. "</h5>
                 <p class="nombre">Tanya Sinclair</p>
                 <p class="puesto">UX Engineer</p>
             </div>
