--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </div>
             <div class="imagen">
                 <img class="bg" src="./static/img/pattern-bg.svg" alt="bg">
-                <img id="foto" class="foto" src="./static/img/image-tanya.jpg" alt="tanya">
+                <img id="fotoa" class="foto" src="./static/img/image-tanya.jpg" alt="tanya">
                 <div class="botones">
                     <div class="flecha">
-                        <button class="bizq" id="izq" href="" onclick="cambiar('izquierda')"></a>
+                        <button class="bizq" href="" onclick="cambiar('izquierda')"></a>
                     </div>
                     <div class="flecha">
-                        <button class="bder" id="der" href="" onclick="cambiar('derecha')"></a>
+                        <button class="bder" href="" onclick="cambiar('derecha')"></a>
                     </div>
                 </div>
             </div>
